--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "jquery": "^3.1.1",
     "owl.carousel": "^2.2.0",
     "slick-carousel": "^1.6.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
